[#3] Added tests for 'FileContent'(main class).